 - They can get bonuses for taking over Equestria
 - Hive improvement focuses
 - Wargoals on Griffonia
✢ Changes to Equestrian focus tree:
- Changes to southern development focuses
✢ Protectorate decisions for Changelings
✢ More cosmetic tags for Changeling puppets
✢ Equestrian is now able to annex Dark Wing's Stalliongradian Autonomy
✢ Removed unfinished neutrality path from Crystal Empire
✢ Cosmetic tag for Aquileian Republic
✢ Names for Aquiliean tanks
✢ Stalliongrad can invite some nations to their faction via decisions
✢ Formable Socialist Republic of the World

⚔ “Knights and Flowers” 1.0.3.2 🌼

✦Fixes and additions:
✢ Fixed various humen portrait errors for Workshop (hopefully)
✢ Griffon Republic can now actually core all Imperial Territory
✢ Griffinstone now has new portraits and generals, woo-hoo
✢ Fixed Kill Blocker decisions showing up for players
✢ Equestria AI template fix, minor starting buff to Equestria, as it starts with 1 line artillery now
✢ Stalliongrad Grammer Tweaks
✢ Griffonian Vassals can now be annexed
✢ Rearrangement of pony racial technologies
✢ Minor buffs to racial technologies
✢ Conversion counter for Dread League
✢ Fixes to Solar Empire focus tree
✢ Nova Griffonia rolls Imperator Highhill less on non-historical AI
✢ Crystal Empire cannot be Communist and Sombra at the same time
✢ Other miscellaneous fixes and improvements

⚔ “Knights and Flowers” 1.0.3 🌼

✦Fixes and additions:
✢ Griffon Liberation Army can upgrade to modern society
✢ Griffon Liberation Army accepts proper members into their faction
✢ No draft dodging, when there is no drafting
✢ Stalliongrad joins the war against Changelings properly
✢ Stalliongrad can abandon the palace project
✢ Equestrian wartime militias are stronger
✢ You can no longer walk on water of some griffon lakes
✢ Equestria won't invade changeling-occupied Olenia instead of protecting the homeland
✢ Smarter focus choices for Equestria and Lunar Empire