@@ -346,8 +346,20 @@ GRI_SUBJECT = {
 	color_ui = rgb { 197 189 122 }
 }
 GRIF_REPUBLIC = {
-	color = rgb { 229 221 120 }
-	color_ui = rgb { 229 221 120 }
+	color = rgb { 212 123 64  }
+	color_ui = rgb { 212 123 64 }
+}
+GRIF_REPUBLIC = {
+	color = rgb { 212 123 64  }
+	color_ui = rgb { 212 123 64 }
+}
+GRIF_AQUILIEA = {
+	color = rgb { 141 67 94 }
+	color_ui = rgb { 141 67 94 }
+}
+GRIF_AQUILIEA_REP = {
+	color = rgb { 84 104 181 }
+	color_ui = rgb { 84 104 181 }
 }
 JER_PUPPET = {
 	color = rgb { 141 67 94 }
