@@ -45,13 +45,11 @@ CHN_protectorates = {
 				tooltip = controls_manehattan_region_tt
 				OR = {
 					any_state = {
-						limit = {
-							OR = {
-								region = 45
-								region = 46
-								region = 47
-								region = 62
-							}
+						OR = {
+							region = 45
+							region = 46
+							region = 47
+							region = 62
 						}
 						is_controlled_by = ROOT
 					}
