@@ -26,13 +26,45 @@ form_griffon_empire_category = {
 
 		complete_effect = {
 			if = {
-				limit = { has_country_flag = have_regular_puppets }
+				limit = {
+					has_country_flag = have_regular_puppets
+					NOT = { original_tag = JER }
+					NOT = { has_cosmetic_tag = JER_formed }
+				}
+				drop_cosmetic_tag = yes
 				hidden_effect = { set_country_flag = { flag = holds_griffon_capital value = 2 } }
 				set_cosmetic_tag = GRIF_REPUBLIC
-				else = {
-					hidden_effect = { set_country_flag = { flag = holds_griffon_capital value = 1 } }
-					set_cosmetic_tag = GRIF_EMPIRE
+			}
+			else_if = {
+				limit = {
+					OR = {
+						original_tag = JER
+						has_cosmetic_tag = JER_formed
+					}
+					has_country_flag = have_regular_puppets
+					NOT = {
+						has_government = democratic
+					}
 				}
+				drop_cosmetic_tag = yes
+				hidden_effect = { set_country_flag = { flag = holds_griffon_capital value = 2 } }
+				set_cosmetic_tag = GRIF_AQUILIEA
+			}
+			else_if = {
+				limit = {
+					OR = {
+						original_tag = JER
+						has_government = democratic
+					}
+				}
+				drop_cosmetic_tag = yes
+				hidden_effect = { set_country_flag = { flag = holds_griffon_capital value = 2 } }
+				set_cosmetic_tag = GRIF_AQUILIEA_REP
+			}
+			else = {
+				hidden_effect = { set_country_flag = { flag = holds_griffon_capital value = 1 } }
+				drop_cosmetic_tag = yes
+				set_cosmetic_tag = GRIF_EMPIRE
 			}
 			set_capital = 382
 			every_state = {
