@@ -604,6 +604,9 @@ ideas = {
 			}
 			available = {
 				is_subject = no
+				NOT = {
+					3 = { is_owned_by = ROOT }
+				}
 			}
 			allowed_civil_war = {
 				has_government = fascism
@@ -965,4 +968,22 @@ ideas = {
 			}
 		}
 	}
-	
+	country = {
+		CHN_celestial_resistance = {
+			picture = celestial_resistance
+			allowed = {
+				always = yes
+			}
+
+			removal_cost = -1
+
+			modifier = {
+				political_power_gain = -0.4
+				army_morale_factor = -0.1
+				industry_repair_factor = -0.3
+				production_factory_max_efficiency_factor = -0.2
+				production_speed_buildings_factor = -0.2
+				army_org_Factor = -0.15
+			}
+		}
+	}
