@@ -1416,7 +1416,9 @@ ideas = {
 			allowed_civil_war = {
 				has_government = democratic
 			}
-
+			available = {
+				is_subject = no
+			}
 			removal_cost = -1
 
 			modifier = {
@@ -1440,7 +1442,9 @@ ideas = {
 			allowed_civil_war = {
 				has_government = democratic
 			}
-
+			available = {
+				is_subject = no
+			}
 			removal_cost = -1
 
 			modifier = {
@@ -1462,7 +1466,9 @@ ideas = {
 			allowed_civil_war = {
 				has_government = democratic
 			}
-
+			available = {
+				is_subject = no
+			}
 			removal_cost = -1
 
 			modifier = {
