@@ -987,6 +987,21 @@ country_event = {
 		add_timed_idea = { idea = chn_vraks_military_effort_2 days = 80 }
 	}
 }
+country_event = {
+	id = changelings.38
+	title = changelings.38.t
+	desc = changelings.38.d
+	picture = GFX_event_school
+
+	is_triggered_only = yes
+
+	option = {
+		name = changelings.38.a
+		add_ideas = {
+			CHN_celestial_resistance
+		}
+	}
+}
 #############################################################################
 ################ CHANGELING PUPPET EVENTS ###################################
 ################ Cosmetic tag events for EQS, CRY, STG, YAK, JAK and OLE #############
