@@ -531,6 +531,7 @@ CHN_unity:0 "Stronger United"
  chn_ditrysium_construction_2:0 "Ditrysium Naval Focus"
  chn_vraks_military_effort:0 "Vraks Military Effort"
 chn_vraks_military_effort_2:0 "Vraks Military Effort"
+CHN_celestial_resistance:0 "Equestrian Resistance"
 ###########################################
 ### EVENTS #################################
 ###########################################
