@@ -37,6 +37,32 @@ GRIF_REPUBLIC_communism:0 "Federation of Socialist Griffon States"
 GRIF_REPUBLIC_communism_DEF:0 "The Federation of Socialist Griffon States"
 GRIF_REPUBLIC_communism_ADJ:0 "Griffon"
 
+GRIF_AQUILIEA_fascism:0 "Griffonian State"
+GRIF_AQUILIEA_fascism_DEF:0 "The Griffonian State"
+GRIF_AQUILIEA_fascism_ADJ:0 "Griffon"
+GRIF_AQUILIEA_neutrality:0 "Griffonian Federation"
+GRIF_AQUILIEA_neutrality_DEF:0 "The Griffonian Federation"
+GRIF_AQUILIEA_neutrality_ADJ:0 "Griffon"
+GRIF_AQUILIEA_democratic:0 "Griffonian Republic"
+GRIF_AQUILIEA_democratic_DEF:0 "The Griffonian Republic"
+GRIF_AQUILIEA_democratic_ADJ:0 "Griffon"
+GRIF_AQUILIEA_communism:0 "Federation of Socialist Griffon States"
+GRIF_AQUILIEA_communism_DEF:0 "The Federation of Socialist Griffon States"
+GRIF_AQUILIEA_communism_ADJ:0 "Griffon"
+
+GRIF_AQUILIEA_REP_fascism:0 "Griffonian State"
+GRIF_AQUILIEA_REP_fascism_DEF:0 "The Griffonian State"
+GRIF_AQUILIEA_REP_fascism_ADJ:0 "Griffon"
+GRIF_AQUILIEA_REP_neutrality:0 "Griffonian Federation"
+GRIF_AQUILIEA_REP_neutrality_DEF:0 "The Griffonian Federation"
+GRIF_AQUILIEA_REP_neutrality_ADJ:0 "Griffon"
+GRIF_AQUILIEA_REP_democratic:0 "Griffonian Republic"
+GRIF_AQUILIEA_REP_democratic_DEF:0 "The Griffonian Republic"
+GRIF_AQUILIEA_REP_democratic_ADJ:0 "Griffon"
+GRIF_AQUILIEA_REP_communism:0 "Federation of Socialist Griffon States"
+GRIF_AQUILIEA_REP_communism_DEF:0 "The Federation of Socialist Griffon States"
+GRIF_AQUILIEA_REP_communism_ADJ:0 "Griffon"
+
 CYA_neutrality:0 "County of Cyanolisia"
 CYA_fascism:0 "County of Cyanolisia"
 CYA_communism:0 "People's Republic of Cyanolisia"
