@@ -17,7 +17,8 @@
 ✢ More cosmetic tags for Changeling puppets
 ✢ Equestrian is now able to annex Dark Wing's Stalliongradian Autonomy
 ✢ Removed unfinished neutrality path from Crystal Empire
-✢ Cosmetic tag for Aquileian Republic
+✢ Blue colour for Aquileian Republic
+✢ Aquiliea will not change colours, when become successor of Griffon Empire
 ✢ Names for Aquiliean tanks
 ✢ Stalliongrad can invite some nations to their faction via decisions
 ✢ Formable Socialist Republic of the World
